# AIfinal

./: .ai_profile  .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  accuracy_baseline.json  conftest.py  docker-entrypoint.sh  pyproject.toml
.claude/: settings.json
.github/workflows/: .gitkeep  ci.yml
DEMO/: main.py  requirements.txt  run.sh
DEMO/models/: .gitkeep
calibration/: README.md
data/: README.md
deploy/: README.md  deploy.sh  docker-compose.yml  healthcheck.sh  rollback.sh
docs/: README.md  ROADMAP.md
docs/adr/: ADR-001-yolo26m-tensorrt-fp16.md  ADR-002-implementation-changes.md  ADR-003-cicd-pipeline.md
docs/changes/: .gitkeep
docs/progress/: 2026-06-11-implementation-status.md  2026-06-11-training-status.md
docs/runbook/: README.md
docs/specs/: SPEC-001-inference-pipeline.md  SPEC-002-actuator-controller.md  SPEC-003-dashboard-server.md  SPEC-004-decision-engine.md  SPEC-005-mqtt-publisher.md  SPEC-006-tegrastats-parser.md  SPEC-007-pipeline-orchestrator.md
models/: README.md
notebooks/: README.md  train_waste_sorter_v6.ipynb
report/: README.md
scripts/: README.md  parse_tegrastats.py
src/: README.md  __init__.py  actuator_controller.py  app.py  dashboard_server.py  decision_engine.py  inference_node.py  mqtt_publisher.py  pipeline_orchestrator.py  tegrastats_parser.py
tests/: README.md  test_actuator_controller.py  test_dashboard_server.py  test_decision_engine.py  test_inference_node.py  test_mqtt_publisher.py  test_pipeline_orchestrator.py  test_tegrastats_parser.py
tests/integration/: .gitkeep  test_dashboard_smoke.py
