[project]
name = "waste-sorter"
version = "0.1.0"
description = "Smart Touchless Waste Sorting System — Datung University I4210"
authors = [
    {name = "李軒杰", email = "jaylee8110@gmail.com"},
    {name = "黃義鈞"},
]
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.0",
    "opencv-python>=4.8",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "paho-mqtt>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
jetson = [
    # Jetson.GPIO is pre-installed on JetPack; listed for documentation only
    # "Jetson.GPIO>=2.1",
]

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["src"]
omit = ["src/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "def __repr__",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
