[project]
name = "waste-sorter"
version = "0.1.0"
description = "Smart Touchless Waste Sorting System — Datung University I4210"
authors = [
    {name = "李軒杰", email = "jaylee8110@gmail.com"},
    {name = "黃義鈞"},
]
requires-python = ">=3.10"
# Core deps are intentionally light so pure-logic units (e.g. DecisionEngine)
# and CI run fast. Heavy runtime deps live in extras below; tests mock them at
# the boundary (per capstone §B.5 guidance).
dependencies = [
    "paho-mqtt>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
inference = [
    "ultralytics>=8.0",
    "opencv-python>=4.8",
]
dashboard = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
]
jetson = [
    # Jetson.GPIO is pre-installed on JetPack; listed for documentation only
    # "Jetson.GPIO>=2.1",
]

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["src"]
# app.py is runtime wiring/glue (uvicorn + camera thread + cross-thread
# broadcast) verified on Yahboom; its logic lives in tested modules.
omit = ["src/__init__.py", "src/app.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "def __repr__",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
