[project]
name = "waste-sorter"
version = "0.1.0"
description = "Smart Touchless Waste Sorting System — Datung University I4210"
authors = [
    {name = "李軒杰", email = "jaylee8110@gmail.com"},
    {name = "黃義鈞"},
]
requires-python = ">=3.10"
# Core deps are intentionally light so pure-logic units (e.g. DecisionEngine)
# and CI run fast. Heavy runtime deps live in extras below; tests mock them at
# the boundary (per capstone §B.5 guidance).
# All deps pinned to a major version (capstone §B.2): allow patch/minor updates
# within the current major, cap at the next major. 0.x packages cap at <1.
dependencies = [
    "paho-mqtt>=2.0,<3",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
inference = [
    "ultralytics>=8.0,<9",
    "opencv-python>=4.8,<5",
]
dashboard = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
    "httpx>=0.27,<1",
]
jetson = [
    # Jetson.GPIO is pre-installed on JetPack; listed for documentation only
    # "Jetson.GPIO>=2.1,<3",
]

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.4,<1",
    # pytest/pytest-cov upper bounds admit the majors CI already resolves
    # (pytest 9.x, pytest-cov 7.x) — no lockfile, so avoid forcing a downgrade.
    "pytest>=8.0,<10",
    "pytest-cov>=5.0,<8",
    "httpx>=0.27,<1",
    "bandit>=1.7,<2",
    "pip-audit>=2.7,<3",
    # fastapi is a runtime extra (dashboard) but the dashboard UNIT tests import
    # it at collection time, so it must also be present to run the test suite.
    "fastapi>=0.110,<1",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["src"]
# app.py is runtime wiring/glue (uvicorn + camera thread + cross-thread
# broadcast) verified on Yahboom; its logic lives in tested modules.
omit = ["src/__init__.py", "src/app.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "def __repr__",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
